--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -225,7 +225,7 @@ em {
     border: 1px solid #000;
     padding: 5px 10px;
     text-align: center;
-    width: 190px; height: 80px;
+    width: 200px; height: 80px;
     overflow: hidden;
     h4 {
       margin: 0 0 5px; padding: 0;
@@ -3890,9 +3890,6 @@ body[class*=jconfirm-no-scroll-] {
   }
   @include media-breakpoint-down(sm) {
     margin-top: 30px;
-    .banner-demoday {
-      margin: 0 auto;
-    }
     .col-md-4:nth-of-type(1n+4) {
       .semifinalist {
         margin-bottom: 40px;
@@ -3943,10 +3940,6 @@ body[class*=jconfirm-no-scroll-] {
     }
   }
   
-  .banner-voting-closes {
-    margin: 0 auto 40px;
-    max-width: 260px;
-  }
   .semifinalist {
     padding-bottom: 20px;
     margin-bottom: 40px;
@@ -3999,6 +3992,7 @@ body[class*=jconfirm-no-scroll-] {
 
 .btn-vote {
   display: block;
+  position: relative;
   width: 100%;
   font-size: 20px;
   text-align: center;
@@ -4015,6 +4009,17 @@ body[class*=jconfirm-no-scroll-] {
   border: none !important;
   text-decoration: none;
   cursor: default;
+  .checkmark-vote {
+    display: block;
+    position: absolute;
+    left: 50%; margin-left: -72px;
+    top: 50%; margin-top: -10px;
+    width: 35px; height: 20px;
+    background: url(../images/checkmark-vote.png) no-repeat center center;
+    background-size: 22px 18px;
+  }
+  
+  
   &:hover, &:focus {
     color: #fff;
   }
@@ -4034,6 +4039,53 @@ body[class*=jconfirm-no-scroll-] {
     &:hover, &:focus {
       background: $brand-primary;
       color: $brand-secondary;
+    }
+  }
+}
+
+
+.voting-status {
+  text-align: center;
+  font-size: 1.714em;
+  line-height: 1.2;
+  font-weight: 700;
+  font-weight: 900;
+  font-family: $font-family-sans-serif;
+  color: #fff !important;
+  padding: 12px;
+  margin: 30px 0;
+  background-color: #2d3190;
+  display: block;
+  border: none !important;
+  span {
+    color: $brand-primary;
+  }
+  
+  &.pending {
+    background-color: #00A7E0;
+  }
+  &.closed {
+    background-color: #E04164;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 1.285em;
+    
+  }
+}
+
+
+.side-banners {
+  width: 100%;
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 260px;
+    &.banner-cast-vote {
+      margin-bottom: 30px;
+      max-width: 180px;
+    }
+    &.banner-voting-closes {
+      max-width: 260px;
     }
   }
 }
