--- a/themes/eric/stylesheets/styles.css
+++ b/themes/eric/stylesheets/styles.css
@@ -2890,7 +2890,7 @@ em {
   border: 1px solid #000;
   padding: 5px 10px;
   text-align: center;
-  width: 190px;
+  width: 200px;
   height: 80px;
   overflow: hidden;
 }
@@ -7338,15 +7338,11 @@ body[class*=jconfirm-no-scroll-] {
   #semifinalists-list {
     margin-top: 30px;
   }
-  /* line 3893, ../sass/styles.scss */
-  #semifinalists-list .banner-demoday {
-    margin: 0 auto;
-  }
-  /* line 3897, ../sass/styles.scss */
+  /* line 3894, ../sass/styles.scss */
   #semifinalists-list .col-md-4:nth-of-type(1n+4) .semifinalist {
     margin-bottom: 40px;
   }
-  /* line 3902, ../sass/styles.scss */
+  /* line 3899, ../sass/styles.scss */
   #semifinalists-list .semifinalist h4 {
     font-size: 1.5em;
     font-weight: 700;
@@ -7355,13 +7351,13 @@ body[class*=jconfirm-no-scroll-] {
   }
 }
 
-/* line 3912, ../sass/styles.scss */
+/* line 3909, ../sass/styles.scss */
 .banner-mentorship img {
   width: 100%;
   height: auto;
 }
 
-/* line 3919, ../sass/styles.scss */
+/* line 3916, ../sass/styles.scss */
 .video-wrapper {
   width: 100%;
   position: relative;
@@ -7369,7 +7365,7 @@ body[class*=jconfirm-no-scroll-] {
   /* 16:9 */
   height: 0;
 }
-/* line 3924, ../sass/styles.scss */
+/* line 3921, ../sass/styles.scss */
 .video-wrapper iframe {
   position: absolute;
   top: 0;
@@ -7382,34 +7378,29 @@ body[class*=jconfirm-no-scroll-] {
  * C O M M U N I T Y   V O T I N G
  * -----------------------------------
  */
-/* line 3938, ../sass/styles.scss */
+/* line 3935, ../sass/styles.scss */
 #semifinalists-voting-list {
   margin-top: 40px;
 }
-/* line 3941, ../sass/styles.scss */
+/* line 3938, ../sass/styles.scss */
 #semifinalists-voting-list .col-md-4:nth-of-type(1n+4) .semifinalist {
   margin-bottom: 0;
 }
-/* line 3946, ../sass/styles.scss */
-#semifinalists-voting-list .banner-voting-closes {
-  margin: 0 auto 40px;
-  max-width: 260px;
-}
-/* line 3950, ../sass/styles.scss */
+/* line 3943, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist {
   padding-bottom: 20px;
   margin-bottom: 40px;
   position: relative;
 }
-/* line 3954, ../sass/styles.scss */
+/* line 3947, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist img {
   margin: 0 auto 15px;
 }
-/* line 3957, ../sass/styles.scss */
+/* line 3950, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist h4, #semifinalists-voting-list .semifinalist .title, #semifinalists-voting-list .semifinalist .url {
   font-family: Lato, "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/* line 3960, ../sass/styles.scss */
+/* line 3953, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist h4 {
   font-size: 1.714rem;
   line-height: 1.3;
@@ -7417,36 +7408,36 @@ body[class*=jconfirm-no-scroll-] {
   margin: 0 0 15px;
   padding: 0;
 }
-/* line 3966, ../sass/styles.scss */
+/* line 3959, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist .title {
   font-weight: 300;
 }
-/* line 3969, ../sass/styles.scss */
+/* line 3962, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist .url {
   font-style: italic;
 }
-/* line 3972, ../sass/styles.scss */
+/* line 3965, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist .description {
   margin: 15px 0 0;
 }
-/* line 3974, ../sass/styles.scss */
+/* line 3967, ../sass/styles.scss */
 #semifinalists-voting-list .semifinalist .description p:last-child {
   margin: 0;
 }
 @media (max-width: 767px) {
-  /* line 3938, ../sass/styles.scss */
+  /* line 3935, ../sass/styles.scss */
   #semifinalists-voting-list {
     margin-top: 30px;
   }
-  /* line 3981, ../sass/styles.scss */
+  /* line 3974, ../sass/styles.scss */
   #semifinalists-voting-list .banner-demoday {
     margin: 0 auto;
   }
-  /* line 3985, ../sass/styles.scss */
+  /* line 3978, ../sass/styles.scss */
   #semifinalists-voting-list .col-md-4:nth-of-type(1n+4) .semifinalist {
     margin-bottom: 40px;
   }
-  /* line 3990, ../sass/styles.scss */
+  /* line 3983, ../sass/styles.scss */
   #semifinalists-voting-list .semifinalist h4 {
     font-size: 1.5em;
     font-weight: 700;
@@ -7455,9 +7446,10 @@ body[class*=jconfirm-no-scroll-] {
   }
 }
 
-/* line 4000, ../sass/styles.scss */
+/* line 3993, ../sass/styles.scss */
 .btn-vote {
   display: block;
+  position: relative;
   width: 100%;
   font-size: 20px;
   text-align: center;
@@ -7475,29 +7467,96 @@ body[class*=jconfirm-no-scroll-] {
   text-decoration: none;
   cursor: default;
 }
-/* line 4018, ../sass/styles.scss */
+/* line 4012, ../sass/styles.scss */
+.btn-vote .checkmark-vote {
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin-left: -72px;
+  top: 50%;
+  margin-top: -10px;
+  width: 35px;
+  height: 20px;
+  background: url(../images/checkmark-vote.png) no-repeat center center;
+  background-size: 22px 18px;
+}
+/* line 4023, ../sass/styles.scss */
 .btn-vote:hover, .btn-vote:focus {
   color: #fff;
 }
-/* line 4021, ../sass/styles.scss */
+/* line 4026, ../sass/styles.scss */
 .btn-vote.enabled {
   cursor: pointer;
   background: #2098d5;
 }
-/* line 4024, ../sass/styles.scss */
+/* line 4029, ../sass/styles.scss */
 .btn-vote.enabled:hover, .btn-vote.enabled:focus {
   color: #2098d5;
   background: #fdcc05;
 }
-/* line 4029, ../sass/styles.scss */
+/* line 4034, ../sass/styles.scss */
 .btn-vote.voted {
   cursor: default;
   font-size: 1.285rem;
   background: #fdcc05;
   color: #2098d5;
 }
-/* line 4034, ../sass/styles.scss */
+/* line 4039, ../sass/styles.scss */
 .btn-vote.voted:hover, .btn-vote.voted:focus {
   background: #fdcc05;
   color: #2098d5;
+}
+
+/* line 4047, ../sass/styles.scss */
+.voting-status {
+  text-align: center;
+  font-size: 1.714em;
+  line-height: 1.2;
+  font-weight: 700;
+  font-weight: 900;
+  font-family: Lato, "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #fff !important;
+  padding: 12px;
+  margin: 30px 0;
+  background-color: #2d3190;
+  display: block;
+  border: none !important;
+}
+/* line 4060, ../sass/styles.scss */
+.voting-status span {
+  color: #fdcc05;
+}
+/* line 4064, ../sass/styles.scss */
+.voting-status.pending {
+  background-color: #00A7E0;
+}
+/* line 4067, ../sass/styles.scss */
+.voting-status.closed {
+  background-color: #E04164;
+}
+@media (max-width: 991px) {
+  /* line 4047, ../sass/styles.scss */
+  .voting-status {
+    font-size: 1.285em;
+  }
+}
+
+/* line 4077, ../sass/styles.scss */
+.side-banners {
+  width: 100%;
+}
+/* line 4079, ../sass/styles.scss */
+.side-banners img {
+  display: block;
+  margin: 0 auto;
+  max-width: 260px;
+}
+/* line 4083, ../sass/styles.scss */
+.side-banners img.banner-cast-vote {
+  margin-bottom: 30px;
+  max-width: 180px;
+}
+/* line 4087, ../sass/styles.scss */
+.side-banners img.banner-voting-closes {
+  max-width: 260px;
 }
